Update entire user interface to reflect project. Change some CSS styling on every page. Add Beverage page. Connect to Beverage database. Add user authentication, add filtering on beverage list. Change master layout page to reflect fake company. Add access denial to beverages page unless user is logged in.

--- a/cis237-assignment6/Views/Home/About.cshtml
+++ b/cis237-assignment6/Views/Home/About.cshtml
@@ -1,7 +1,11 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+@{
+ViewBag.Message = "About Wines Galore";
+}
+<h1 style="color: midnightblue; font-family: 'Baskerville Old Face';">@ViewBag.Title.</h1>
+<h2 style="color: midnightblue; font-family: 'Baskerville Old Face';">@ViewBag.Message</h2>
 
-<p>Use this area to provide additional information.</p>
+<p style="color: midnightblue; font-family: 'Baskerville Old Face'; font-size: 14pt;">Wines Galore is a family company created on the values of integrity and a love for delicous wine. Within our website, once you are logged in,
+    you can see the entire wine list, add new wines to the list, delete wines from the list, and update any wines as well. </p>
