--- a/cis237-assignment6/Views/Home/Contact.cshtml
+++ b/cis237-assignment6/Views/Home/Contact.cshtml
@@ -1,17 +1,22 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+@{ 
+    ViewBag.Message = "Wines Galore Contact Information:";
+}
+<h1 style="font-family: 'Baskerville Old Face'; color: midnightblue;">@ViewBag.Title.</h1>
+<h2 style="font-family: 'Baskerville Old Face'; color: midnightblue;">@ViewBag.Message</h2>
 
-<address>
+<address style="font-family: 'Baskerville Old Face'; color: midnightblue; font-size: 14pt;">
     One Microsoft Way<br />
     Redmond, WA 98052-6399<br />
     <abbr title="Phone">P:</abbr>
     425.555.0100
 </address>
 
-<address>
+<address style="font-family: 'Baskerville Old Face'; color: midnightblue;">
     <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
+
+<p style="font-family: 'Baskerville Old Face'; color: midnightblue;">Feel Free To Contact Us Anytime!</p>
