--- a/cis237-assignment6/Views/Home/Index.cshtml
+++ b/cis237-assignment6/Views/Home/Index.cshtml
@@ -2,30 +2,29 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="jumbotron" style="background-color: deepskyblue; color: midnightblue; font-family: 'Baskerville Old Face';">
+    <h1>Wines Galore</h1>
+    <p class="lead">Welcome to Wines Galore. Here you can access our entire collection of wines, but be sure to create an account first! </p>
+    
 </div>
 
-<div class="row">
+<div class="row" style="font-family: 'Baskerville Old Face'; color: midnightblue;">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Check Out Our Available Wines</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Head on over to our Beverages page to see what we have available!
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Contact Us!</h2>
+        <p>Have questions? Need help navigating the webiste? Forgot your password? Look no further than our contact page. Here you can send us an email or
+        get our phone number and give us a call.</p>
+        
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Learn More</h2>
+        <p>The About page will give you some awesome background information into our company!</p>
+        
     </div>
 </div>
